fix text-wrapping issue with content of tweets

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -54,6 +54,7 @@
   border-bottom: 3px solid #545149;
   padding: 0 10px 15px 10px;
   margin-bottom: 20px;
+  word-wrap: break-word;
 }
 
 .tweet__article-footer {
